[gd_scene load_steps=5 format=3 uid="uid://cqp6y1g2r8dmb"]

[ext_resource type="Script" path="res://Scripts/HealthBar.gd" id="1_2f3g4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1a2b3"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.6, 0.6, 0.6, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2b3c4"]
bg_color = Color(0.1, 0.1, 0.1, 0.6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3c4d5"]
bg_color = Color(0.2, 0.8, 0.2, 1)

[node name="HealthBar" type="Control"]
z_index = 100
layout_mode = 3
anchors_preset = 0
offset_right = 50.0
offset_bottom = 30.0
script = ExtResource("1_2f3g4")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture_filter = 1
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="HealthProgress" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 12.0
offset_right = -2.0
offset_bottom = -2.0
theme_override_styles/background = SubResource("StyleBoxFlat_2b3c4")
theme_override_styles/fill = SubResource("StyleBoxFlat_3c4d5")
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = 3.0
offset_right = 15.0
offset_bottom = 15.0
theme_override_font_sizes/font_size = 7
text = "100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -9.0
offset_right = 25.0
offset_bottom = 3.0
theme_override_font_sizes/font_size = 8
text = "Player"
horizontal_alignment = 1
vertical_alignment = 1 